--- a/style.css
+++ b/style.css
@@ -8,12 +8,38 @@
   font-size: 16px;
 }
 
+/* FONT SIZES */
+.title {
+  font-size: 3.125rem;
+  font-weight: 400;
+}
+.subtitle {
+  font-size: 1.625rem;
+  font-weight: 400;
+}
+.email-text {
+  font-size: 1.2rem;
+  font-weight: 400;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
 .banner-wrap {
   background: url("./assets/bgimage.jpg");
   background-size: cover;
   background-position: center;
-  height: 80vh;
+  height: 90vh;
   color: white;
+  position: relative;
+  z-index: 1;
+}
+.overlay {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: black;
+  opacity: 50%;
+  z-index: -1;
 }
 
 nav {
@@ -34,6 +60,72 @@ nav .sign-in-btn {
   border-radius: 3px;
 }
 
-.title {
-  font-size: 3.125rem;
+.banner-container {
+  height: calc(100% - 56px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.get-started-form {
+  display: flex;
+}
+.get-started-form input {
+  width: 450px;
+  height: 60px;
+  border: none;
+  padding: 10px;
+}
+.get-started-form button {
+  width: 215px;
+  background-color: red;
+  color: white;
+  border: none;
+  height: 60px;
+}
+
+.info-container {
+  display: flex;
+  color: white;
+  background-color: black;
+  padding: 0 50px;
+  border-top: 12px #222222 solid;
+}
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.tv-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  align-items: center;
+}
+.tv-container img {
+  z-index: 1;
+}
+.tv-container video {
+  position: absolute;
+}
+
+footer {
+  background: black;
+  color: grey;
+  border-top: 12px #222222 solid;
+  padding: 50px 150px;
+}
+
+footer ul {
+  list-style-type: none;
+  columns: 4;
+}
+footer ul li {
+  cursor: pointer;
+}
+footer ul li:hover {
+  text-decoration: underline;
 }
